<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_layout"
    android:background="@drawable/main_activity_background_list"
    tools:context=".activity.SettingsActivity">

    <Button
        android:id="@+id/button_settings_activity_log_out"
        android:layout_width="wrap_content"
...
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_settings_activity_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/team"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/spinner_settings_team"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_settings_activity_username" />

    <Spinner
        android:id="@+id/spinner_settings_team"
        android:layout_width="300dp"
        android:layout_height="48dp"
...
